#   PROCESS THAT IS TIME SENSITIVE, UNMONITORED, OR
#   PERSISTENCE CRITICAL. DO NOT USE THIS SOFTWARE WITHOUT
#   ANOTHER METHOD iOR RUNNING THE PROCESS YOU WISH TO
#   AUTOMATE WITH Net::FullAuto. DO NOT USE IN/FOR A PROCESS
#   WHERE FAILURE OF "ANY KIND" IS UNACCEPTABLE.
#
################################################################


2011-07-17  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9944 released.

        * More changes to Makefile.PL.


2011-07-10  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9943 released.

        * More changes to Makefile.PL.


2011-07-09  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9942 released.

        * More changes to Makefile.PL.


2011-07-08  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9941 released.

        * More changes to Makefile.PL.


2011-07-08  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9940 released.

        * Now forcing Term::RawInput to install early in
          Makefile.PL.


2011-07-07  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9939 released.

        * Fixed some more logic in Makefile.PL.


2011-07-07  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9938 released.

        * Fixed some more logic in Makefile.PL.


2011-07-05  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9937 released.

        * Added Algorithm::Diff as a dependency to Makefile.PL.
          (This is a prerequisite for Data::Dump::Streamer).


2011-07-04  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9936 released.

        * Made more adjustments to Cygwin based installation
          code in Makefile.PL for Windows EXE installation.


2011-06-23  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9935 released.
