@@ -54,7 +54,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.9944';
+our $VERSION='0.9945';
 
 
 use 5.005;
