@@ -45,6 +45,13 @@
 ################################################################
 
 
+2011-07-18  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 0.9945 released.
+
+        * More changes to Makefile.PL.
+
+
 2011-07-17  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 0.9944 released.
